overflow x on small screens fixed

--- a/style.scss
+++ b/style.scss
@@ -4,8 +4,13 @@
   padding: 0;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   height: 100vh;
+  position: relative;
 }
 
 @font-face {
